[gd_scene load_steps=8 format=2]

[ext_resource path="res://sprites/industrial.v2.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Drone.gd" type="Script" id=2]
[ext_resource path="res://audio/elec.wav" type="AudioStream" id=3]

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionShape2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "dead"
length = 1.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 4, 5, 6 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.14 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0.25 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3 ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 5.5, 5.5 )

[node name="Drone" type="RigidBody2D"]
gravity_scale = 0.0
continuous_cd = 1
contacts_reported = 1
contact_monitor = true
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/RESET = SubResource( 7 )
anims/dead = SubResource( 1 )
anims/idle = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 0.5 )
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 7
region_enabled = true
region_rect = Rect2( 0, 80, 112, 16 )

[node name="Particles2D" type="CPUParticles2D" parent="."]
show_behind_parent = true
position = Vector2( 0.619519, -4.18984 )
amount = 10
emission_shape = 2
emission_rect_extents = Vector2( 3, 1 )
gravity = Vector2( 0, -10 )
color = Color( 1, 0.145098, 0.384314, 0.376471 )

[node name="sfx" type="Node" parent="."]

[node name="sfx" type="AudioStreamPlayer" parent="sfx"]
stream = ExtResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3

[node name="rightRay" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 8, 0 )

[node name="leftRay" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -8, 0 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
